[package]
name = "key_derives"
version = "0.1.0"
license = "MIT"
edition = "2024"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "techmetx11 <techmetx11@disroot.org>"]

[dependencies]
curve25519-dalek = "4.1.3"
sha3 = { version = "0.10", default-features = false }
zeroize = { version = "1.5", default-features = false, features = ["zeroize_derive"] }
monero-wallet = { git = "https://github.com/monero-oxide/monero-oxide", default-features = false, features = ["std"], optional = true }

[features]
monero-wallet = ["dep:monero-wallet"]

[lints]
workspace = true
