[package]
name = "monero-wallet-util"
version = "0.1.0"
description = "Additional utility functions for monero-wallet"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-wallet-util/tree/main/util"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"
rust-version = "1.89"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
std-shims = {  version = "0.1.4", default-features = false }

thiserror = { version = "1", default-features = false, optional = true }

zeroize = { version = "1.5", default-features = false, features = ["zeroize_derive"] }
rand_core = { version = "0.6", default-features = false }

monero-wallet = { git = "https://github.com/monero-oxide/monero-oxide", default-features = false }

monero-seed = { path = "../seed", default-features = false }
polyseed = { path = "../polyseed", default-features = false }


[features]
std = [
  "std-shims/std",

  "thiserror",

  "zeroize/std",
  "rand_core/std",

  "monero-wallet/std",

  "monero-seed/std",
  "polyseed/std",
]
compile-time-generators = ["monero-wallet/compile-time-generators"]
multisig = ["monero-wallet/multisig"]
default = ["std", "compile-time-generators"]
