[package]
name = "monero-oxide-no-std-tests"
version = "0.1.0"
description = "A crate to test no-std builds of monero-oxide crates work"
license = "MIT"
repository = "https://github.com/monero-oxide/monero-oxide/tree/develop/tests/no-std"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["nostd", "no_std", "alloc"]
edition = "2021"
rust-version = "1.89"
publish = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
monero-wallet-util = { path = "../../util", default-features = false, features = ["compile-time-generators"] }
